--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="script.js"></script>
   <title>Document</title>
 </head>
-<body>
-  <canvas style="border: 1px solid black"></canvas>
+<body style="background-color: black">
+  <canvas style="border: 1px solid gray"></canvas>
 </body>
 </html>
